--- a/bejar/views/bejar/user/signup.haml
+++ b/bejar/views/bejar/user/signup.haml
@@ -1,9 +1,10 @@
 !!!
 %html
-  %head
-    %title Sign up
+    %head
+        %title Sign up
   %body
     %form{ :method => :POST}
-      %input{ :type => :email, :placeholder => :email, :name => :email}
-      %input{ :type => :password, :placeholder => :password, :name => :password}
-      %input{ :type => :submit, :value => :Signup}
+        %input{ :type => :email, :placeholder => :email, :name => :email}
+        %input{ :type => :password, :placeholder => :password, :name => :password}
+        %input{ :type => :submit, :value => :Signup}
+        %p= @user.inspect
