update user signin

--- a/bejar/views/bejar/user/signup.haml
+++ b/bejar/views/bejar/user/signup.haml
@@ -1,9 +1,4 @@
-!!!
-%html
-    %head
-        %title Sign in
-%body
-    %form{ :method => :POST}
-        %input{ :type => :email, :placeholder => :email, :name => :email}
-        %input{ :type => :password, :placeholder => :password, :name => :password}
-        %input{ :type => :submit, :value => :Signin}
+%form{ :method => :POST}
+    %input{ :type => :email, :placeholder => :email, :name => :email}
+    %input{ :type => :password, :placeholder => :password, :name => :password}
+    %input{ :type => :submit, :value => :Signup}
